# HCBC-2026-Dealio-AIDealAssist

./: .env.example  .gitignore  README.md  START_HACKATHON.md  client_plan.md  docker-compose.yml  implementation_segments.md  requirement.md  technical_architecture.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  celery_app.py  celery_tasks.py  config.py  database.py  main.py  models.py  redis_client.py
backend/app/auth/: security.py
backend/app/kb/: __init__.py  schemas.py
backend/app/kb/ingestion/: __init__.py  chunker.py  embedder.py  pipeline.py
backend/app/kb/ingestion/parsers/: __init__.py  csv_parser.py  docx_parser.py  pdf_parser.py  txt_parser.py
backend/app/kb/retrieval/: __init__.py  query_router.py  searcher.py
backend/app/routers/: auth.py  health.py  kb.py  llm.py  metrics.py  operations.py  tasks.py  users.py  workflows.py
backend/app/schemas/: auth.py
backend/app/services/: clients.py  llm.py  notifications.py
backend/app/tests/: test_auth_security.py  test_kb_chunker_embedder.py  test_llm_config.py  test_task_helpers.py  test_workflow_agents.py
backend/app/workflow/: __init__.py  agents.py  audit.py  runtime.py  schemas.py
backend/migrations/: 001_initial_schema.sql  002_segment3_workflow_columns.sql  003_segment4_operational_tables.sql
docs/: segment1_setup.md  segment2_kb_checks.md  segment3_workflow_checks.md  segment4_product_checks.md
frontend/: app.js  index.html  styles.css
infrastructure/prometheus/: prometheus.yml
scripts/: segment1_smoke.ps1
(+2 files in other folders)
