[project]
name = "manage-ai-backend"
version = "0.1.0"
description = "Core backend foundation for the Manage AI autonomous agent system."
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "bcrypt>=4.1.0,<5.0.0",
    "celery>=5.4.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "groq>=0.11.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.4.0",
    "prometheus-client>=0.21.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "SQLAlchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
